@@ -15,15 +15,10 @@ import java.io.StreamTokenizer;
 import java.io.StringReader;
 import java.nio.file.DirectoryIteratorException;
 import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Collection;
-import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Stream;
@@ -35,14 +30,12 @@ import lombok.Synchronized;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
 import org.apache.logging.log4j.io.IoBuilder;
-import org.eclipse.aether.artifact.Artifact;
 import org.springframework.boot.system.ApplicationHome;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.util.StreamUtils;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toSet;
 import static jdk.jshell.Snippet.Status.REJECTED;
 import static org.apache.logging.log4j.Level.WARN;
 
@@ -72,7 +65,6 @@ public class Shell implements AnnotatedMagic, AutoCloseable {
     private PrintStream out = null;
     private PrintStream err = null;
     private final Resolver resolver = new Resolver();
-    private final Map<File,Set<Artifact>> classpath = new LinkedHashMap<>();
 
     /**
      * Method to start a {@link Shell}.
@@ -132,18 +124,11 @@ public class Shell implements AnnotatedMagic, AutoCloseable {
     public Map<String,Magic> magics() { return magics; }
 
     /**
-     * Method to get the current {@link JShell} classpath.
+     * Method to get the {@link Resolver}.
      *
-     * @return  The {@link Set} of {@link File}s.
+     * @return  The {@link Resolver}.
      */
-    public Set<File> classpath() { return classpath.keySet(); }
-
-    /**
-     * Method to get the current {@link POM}.
-     *
-     * @return  The current {@link POM}.
-     */
-    public POM pom() { return resolver.pom(); }
+    public Resolver resolver() { return resolver; }
 
     /**
      * Method to call
@@ -152,28 +137,18 @@ public class Shell implements AnnotatedMagic, AutoCloseable {
      * @param   pom             The {@link POM} to merge.
      */
     public void resolve(POM pom) {
-        resolver.resolve(this, pom, out, err);
+        resolver().resolve(this, pom, out, err);
     }
 
     /**
      * Method to search for and add jars to the {@link JShell} instance
-     * {@code classpath}.  See {@link #addToClasspath(String...)}.
+     * {@code classpath}.  See {@link #addToClasspath(File...)}.
      *
      * @param   files           The directories ({@link File}s) to search.
      */
     public void addJarsToClasspath(File... files) throws IOException {
-        addJarsToClasspath(Stream.of(files).map(File::toPath).toArray(Path[]::new));
-    }
-
-    /**
-     * Method to search for and add jars to the {@link JShell} instance
-     * {@code classpath}.  See {@link #addToClasspath(String...)}.
-     *
-     * @param   paths           The directory path(s) to search.
-     */
-    public void addJarsToClasspath(Path... paths) throws IOException {
-        for (var path : paths) {
-            path = path.toAbsolutePath();
+        for (var file : files) {
+            var path = file.toPath().toAbsolutePath();
 
             try (var stream = Files.newDirectoryStream(path, "*.jar")) {
                 for (var entry : stream) {
@@ -186,57 +161,19 @@ public class Shell implements AnnotatedMagic, AutoCloseable {
     }
 
     /**
-     * Method to search for and add jars to the {@link JShell} instance
-     * {@code classpath}.  See {@link #addToClasspath(String...)}.
+     * Method to add resolved a paths to the {@link JShell} instance.  See
+     * {@link JShell#addToClasspath(String)}.
      *
-     * @param   paths           The directory path(s) to search.
+     * @param   files           The {@link File} to add.
      */
-    public void addJarsToClasspath(String... paths) throws IOException {
-        addJarsToClasspath(Stream.of(paths).map(Paths::get).toArray(Path[]::new));
-    }
-
-    private void addToClasspath(File... files) {
+    @Synchronized
+    public void addToClasspath(File... files) {
         for (var file : files) {
             file = file.getAbsoluteFile();
 
-            if (! classpath.containsKey(file)) {
-                addToClasspath(file, resolver.getJarArtifacts(file));
-            }
-        }
-    }
+            if (! resolver().classpath().contains(file)) {
+                resolver().addToClasspath(file);
 
-    /**
-     * Method to manage and add path(s) to the {@link JShell} instance.  See
-     * {@link JShell#addToClasspath(String)}.
-     *
-     * @param   paths           The path(s) to add.
-     */
-    public void addToClasspath(Path... paths) {
-        addToClasspath(Stream.of(paths).map(Path::toFile).toArray(File[]::new));
-    }
-
-    /**
-     * Method to manage and add path(s) to the {@link JShell} instance.  See
-     * {@link JShell#addToClasspath(String)}.
-     *
-     * @param   paths           The path(s) to add.
-     */
-    public void addToClasspath(String... paths) {
-        addToClasspath(Stream.of(paths).map(File::new).toArray(File[]::new));
-    }
-
-    /**
-     * Method to add resolved a path to the {@link JShell} instance.  See
-     * {@link JShell#addToClasspath(String)}.
-     *
-     * @param   file            The {@link File} to add.
-     * @param   collection      The {@link Collection} of {@link Artifact}s
-     *                          this {@link File} represents.
-     */
-    @Synchronized
-    protected void addToClasspath(File file, Collection<Artifact> collection) {
-        if (! classpath.containsKey(file)) {
-            if (classpath.put(file, collection.stream().collect(toSet())) == null) {
                 var jshell = this.jshell;
 
                 if (jshell != null) {
@@ -290,7 +227,7 @@ public class Shell implements AnnotatedMagic, AutoCloseable {
                 log.warn("{}", exception, exception);
             }
 
-            classpath.keySet()
+            resolver().classpath()
                 .forEach(t -> jshell.addToClasspath(t.toString()));
         }
 
