@@ -1,5 +1,8 @@
 2021-02-23  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/galyleo/dependency/Resolver.java:
+	Provide classpath management.
+
 	* src/main/java/galyleo/dependency/Analyzer.java:
 	Use org.eclipse.aether.artifact.Artifact.
 
